Fixed Overlapping Price of Products with Border + BugFix

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,7 +11,7 @@
 .Image {
   display: inline-block;
   width: 100%;
-  height: 80%;
+  height: 70%;
   border: 1px solid #ccc;
   padding: 5px;
 }
